Compilers/ply-3.11/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    APOSTROPHE
    ARRAY
    COMA
    COMMENT_LINE
    DEF
    DOT
    DOUBLEAPOSTROPHE
    FLOAT_NUMBER
    LBRACKET
    LCORCHETE
    LIST
    RBRACKET
    RCORCHETE
    RETURN

Grammar

Rule 0     S' -> file_input
Rule 1     file_input -> stmt file_inputhelp
Rule 2     file_inputhelp -> file_input
Rule 3     file_inputhelp -> empty
Rule 4     stmt -> simple_stmt
Rule 5     stmt -> compound_stmt
Rule 6     simple_stmt -> small_stmt simplehelper
Rule 7     simplehelper -> NEWLINE small_stmt simplehelper
Rule 8     simplehelper -> empty
Rule 9     small_stmt -> expr_stmt
Rule 10    small_stmt -> print_stmt
Rule 11    small_stmt -> input_stmt
Rule 12    print_stmt -> PRINT LPAREN test RPAREN
Rule 13    input_stmt -> test ASSIGN INPUT LPAREN STRING RPAREN
Rule 14    expr_stmt -> typotest
Rule 15    expr_stmt -> augassign
Rule 16    expr_stmt -> annassign
Rule 17    typotest -> CDEF vartypes
Rule 18    vartypes -> INT test ASSIGN test
Rule 19    vartypes -> DOUBLE test ASSIGN test
Rule 20    vartypes -> SHORT test ASSIGN test
Rule 21    vartypes -> LONG test ASSIGN test
Rule 22    vartypes -> CHAR test ASSIGN test
Rule 23    vartypes -> FLOAT test ASSIGN test
Rule 24    annassign -> test ASSIGN test
Rule 25    augassign -> test PLUS_ASSIGN test
Rule 26    augassign -> test MINUS_ASSIGN test
Rule 27    augassign -> test TIMES_ASSIGN test
Rule 28    augassign -> test DIVIDE_ASSIGN test
Rule 29    augassign -> test ASSIGN_MODULE test
Rule 30    compound_stmt -> if_stmnt
Rule 31    compound_stmt -> for_stmt
Rule 32    compound_stmt -> break_stmt
Rule 33    break_stmt -> BREAK
Rule 34    if_stmnt -> IF test THEN suite NEWLINE
Rule 35    if_stmnt -> compound_if
Rule 36    compound_if -> IF test THEN itersuite elif_stmnt else_stmnt
Rule 37    compound_if -> IF test THEN itersuite if_stmnt else_stmnt
Rule 38    itersuite -> suite itersuite
Rule 39    itersuite -> suite elif_stmnt
Rule 40    else_stmnt -> ELSE THEN suite
Rule 41    else_stmnt -> ELSE THEN if_stmnt
Rule 42    else_stmnt -> empty
Rule 43    elif_stmnt -> ELIF test THEN suite elif_stmnt
Rule 44    elif_stmnt -> else_stmnt
Rule 45    for_stmt -> FOR exprlist IN testlist THEN stmt
Rule 46    for_stmt -> FOR exprlist IN RANGE THEN stmt
Rule 47    exprlist -> expression exprlisthelper
Rule 48    exprlisthelper -> NEWLINE expression exprlisthelper
Rule 49    exprlisthelper -> empty
Rule 50    testlist -> test testlisthelper
Rule 51    testlisthelper -> NEWLINE test exprlisthelper
Rule 52    testlisthelper -> empty
Rule 53    suite -> simple_stmt
Rule 54    suite -> NEWLINE INDENT stmt
Rule 55    test -> or_test
Rule 56    or_test -> and_test or_comp
Rule 57    or_comp -> OR and_test or_comp
Rule 58    or_comp -> empty
Rule 59    and_test -> not_test and_comp
Rule 60    and_comp -> AND not_test and_comp
Rule 61    and_comp -> empty
Rule 62    not_test -> NOT not_test
Rule 63    not_test -> comparison
Rule 64    comparison -> expression comphelper
Rule 65    comphelper -> comp_op expression comphelper
Rule 66    comphelper -> empty
Rule 67    comp_op -> LESS_THAN
Rule 68    comp_op -> MORE_THAN
Rule 69    comp_op -> EQUALS
Rule 70    comp_op -> MORE_EQUAL
Rule 71    comp_op -> LESS_EQUAL
Rule 72    comp_op -> NOT_EQUAL
Rule 73    comp_op -> IN
Rule 74    comp_op -> NOT_IN
Rule 75    comp_op -> IS
Rule 76    comp_op -> IS_NOT
Rule 77    expression -> arith_expr
Rule 78    arith_expr -> term PLUS arith_expr
Rule 79    arith_expr -> term MINUS arith_expr
Rule 80    arith_expr -> term empty
Rule 81    term -> factor TIMES term
Rule 82    term -> factor DIVIDE term
Rule 83    term -> factor MODULE term
Rule 84    term -> factor empty
Rule 85    factor -> LPAREN MINUS factor RPAREN
Rule 86    factor -> power
Rule 87    power -> factor POWER factor
Rule 88    power -> atom_expr empty
Rule 89    atom_expr -> atom
Rule 90    atom -> ID
Rule 91    atom -> NUMBER
Rule 92    atom -> STRING
Rule 93    atom -> BOOL_TRUE
Rule 94    atom -> BOOL_FALSE
Rule 95    atom -> NONE
Rule 96    empty -> <empty>

Terminals, with rules where they appear

AND                  : 60
APOSTROPHE           : 
ARRAY                : 
ASSIGN               : 13 18 19 20 21 22 23 24
ASSIGN_MODULE        : 29
BOOL_FALSE           : 94
BOOL_TRUE            : 93
BREAK                : 33
CDEF                 : 17
CHAR                 : 22
COMA                 : 
COMMENT_LINE         : 
DEF                  : 
DIVIDE               : 82
DIVIDE_ASSIGN        : 28
DOT                  : 
DOUBLE               : 19
DOUBLEAPOSTROPHE     : 
ELIF                 : 43
ELSE                 : 40 41
EQUALS               : 69
FLOAT                : 23
FLOAT_NUMBER         : 
FOR                  : 45 46
ID                   : 90
IF                   : 34 36 37
IN                   : 45 46 73
INDENT               : 54
INPUT                : 13
INT                  : 18
IS                   : 75
IS_NOT               : 76
LBRACKET             : 
LCORCHETE            : 
LESS_EQUAL           : 71
LESS_THAN            : 67
LIST                 : 
LONG                 : 21
LPAREN               : 12 13 85
MINUS                : 79 85
MINUS_ASSIGN         : 26
MODULE               : 83
MORE_EQUAL           : 70
MORE_THAN            : 68
NEWLINE              : 7 34 48 51 54
NONE                 : 95
NOT                  : 62
NOT_EQUAL            : 72
NOT_IN               : 74
NUMBER               : 91
OR                   : 57
PLUS                 : 78
PLUS_ASSIGN          : 25
POWER                : 87
PRINT                : 12
RANGE                : 46
RBRACKET             : 
RCORCHETE            : 
RETURN               : 
RPAREN               : 12 13 85
SHORT                : 20
STRING               : 13 92
THEN                 : 34 36 37 40 41 43 45 46
TIMES                : 81
TIMES_ASSIGN         : 27
error                : 

Nonterminals, with rules where they appear

and_comp             : 59 60
and_test             : 56 57
annassign            : 16
arith_expr           : 77 78 79
atom                 : 89
atom_expr            : 88
augassign            : 15
break_stmt           : 32
comp_op              : 65
comparison           : 63
comphelper           : 64 65
compound_if          : 35
compound_stmt        : 5
elif_stmnt           : 36 39 43
else_stmnt           : 36 37 44
empty                : 3 8 42 49 52 58 61 66 80 84 88
expr_stmt            : 9
expression           : 47 48 64 65
exprlist             : 45 46
exprlisthelper       : 47 48 51
factor               : 81 82 83 84 85 87 87
file_input           : 2 0
file_inputhelp       : 1
for_stmt             : 31
if_stmnt             : 30 37 41
input_stmt           : 11
itersuite            : 36 37 38
not_test             : 59 60 62
or_comp              : 56 57
or_test              : 55
power                : 86
print_stmt           : 10
simple_stmt          : 4 53
simplehelper         : 6 7
small_stmt           : 6 7
stmt                 : 1 45 46 54
suite                : 34 38 39 40 43
term                 : 78 79 80 81 82 83
test                 : 12 13 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 34 36 37 43 50 51
testlist             : 45
testlisthelper       : 50
typotest             : 14
vartypes             : 17

Parsing method: LALR

state 0

    (0) S' -> . file_input
    (1) file_input -> . stmt file_inputhelp
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (6) simple_stmt -> . small_stmt simplehelper
    (30) compound_stmt -> . if_stmnt
    (31) compound_stmt -> . for_stmt
    (32) compound_stmt -> . break_stmt
    (9) small_stmt -> . expr_stmt
    (10) small_stmt -> . print_stmt
    (11) small_stmt -> . input_stmt
    (34) if_stmnt -> . IF test THEN suite NEWLINE
    (35) if_stmnt -> . compound_if
    (45) for_stmt -> . FOR exprlist IN testlist THEN stmt
    (46) for_stmt -> . FOR exprlist IN RANGE THEN stmt
    (33) break_stmt -> . BREAK
    (14) expr_stmt -> . typotest
    (15) expr_stmt -> . augassign
    (16) expr_stmt -> . annassign
    (12) print_stmt -> . PRINT LPAREN test RPAREN
    (13) input_stmt -> . test ASSIGN INPUT LPAREN STRING RPAREN
    (36) compound_if -> . IF test THEN itersuite elif_stmnt else_stmnt
    (37) compound_if -> . IF test THEN itersuite if_stmnt else_stmnt
    (17) typotest -> . CDEF vartypes
    (25) augassign -> . test PLUS_ASSIGN test
    (26) augassign -> . test MINUS_ASSIGN test
    (27) augassign -> . test TIMES_ASSIGN test
    (28) augassign -> . test DIVIDE_ASSIGN test
    (29) augassign -> . test ASSIGN_MODULE test
    (24) annassign -> . test ASSIGN test
    (55) test -> . or_test
    (56) or_test -> . and_test or_comp
    (59) and_test -> . not_test and_comp
    (62) not_test -> . NOT not_test
    (63) not_test -> . comparison
    (64) comparison -> . expression comphelper
    (77) expression -> . arith_expr
    (78) arith_expr -> . term PLUS arith_expr
    (79) arith_expr -> . term MINUS arith_expr
    (80) arith_expr -> . term empty
    (81) term -> . factor TIMES term
    (82) term -> . factor DIVIDE term
    (83) term -> . factor MODULE term
    (84) term -> . factor empty
    (85) factor -> . LPAREN MINUS factor RPAREN
    (86) factor -> . power
    (87) power -> . factor POWER factor
    (88) power -> . atom_expr empty
    (89) atom_expr -> . atom
    (90) atom -> . ID
    (91) atom -> . NUMBER
    (92) atom -> . STRING
    (93) atom -> . BOOL_TRUE
    (94) atom -> . BOOL_FALSE
    (95) atom -> . NONE

    IF              shift and go to state 12
    FOR             shift and go to state 15
    BREAK           shift and go to state 16
    PRINT           shift and go to state 20
    CDEF            shift and go to state 23
    NOT             shift and go to state 27
    LPAREN          shift and go to state 21
    ID              shift and go to state 36
    NUMBER          shift and go to state 37
    STRING          shift and go to state 22
    BOOL_TRUE       shift and go to state 38
    BOOL_FALSE      shift and go to state 39
    NONE            shift and go to state 40

    file_input                     shift and go to state 1
    stmt                           shift and go to state 2
    simple_stmt                    shift and go to state 3
    compound_stmt                  shift and go to state 4
    small_stmt                     shift and go to state 5
    if_stmnt                       shift and go to state 6
    for_stmt                       shift and go to state 7
    break_stmt                     shift and go to state 8
    expr_stmt                      shift and go to state 9
    print_stmt                     shift and go to state 10
    input_stmt                     shift and go to state 11
    test                           shift and go to state 13
    compound_if                    shift and go to state 14
    typotest                       shift and go to state 17
    augassign                      shift and go to state 18
    annassign                      shift and go to state 19
    or_test                        shift and go to state 24
    and_test                       shift and go to state 25
    not_test                       shift and go to state 26
    comparison                     shift and go to state 28
    expression                     shift and go to state 29
    arith_expr                     shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32
    power                          shift and go to state 33
    atom_expr                      shift and go to state 34
    atom                           shift and go to state 35

state 1

    (0) S' -> file_input .



state 2

    (1) file_input -> stmt . file_inputhelp
    (2) file_inputhelp -> . file_input
    (3) file_inputhelp -> . empty
    (1) file_input -> . stmt file_inputhelp
    (96) empty -> .
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (6) simple_stmt -> . small_stmt simplehelper
    (30) compound_stmt -> . if_stmnt
    (31) compound_stmt -> . for_stmt
    (32) compound_stmt -> . break_stmt
    (9) small_stmt -> . expr_stmt
    (10) small_stmt -> . print_stmt
    (11) small_stmt -> . input_stmt
    (34) if_stmnt -> . IF test THEN suite NEWLINE
    (35) if_stmnt -> . compound_if
    (45) for_stmt -> . FOR exprlist IN testlist THEN stmt
    (46) for_stmt -> . FOR exprlist IN RANGE THEN stmt
    (33) break_stmt -> . BREAK
    (14) expr_stmt -> . typotest
    (15) expr_stmt -> . augassign
    (16) expr_stmt -> . annassign
    (12) print_stmt -> . PRINT LPAREN test RPAREN
    (13) input_stmt -> . test ASSIGN INPUT LPAREN STRING RPAREN
    (36) compound_if -> . IF test THEN itersuite elif_stmnt else_stmnt
    (37) compound_if -> . IF test THEN itersuite if_stmnt else_stmnt
    (17) typotest -> . CDEF vartypes
    (25) augassign -> . test PLUS_ASSIGN test
    (26) augassign -> . test MINUS_ASSIGN test
    (27) augassign -> . test TIMES_ASSIGN test
    (28) augassign -> . test DIVIDE_ASSIGN test
    (29) augassign -> . test ASSIGN_MODULE test
    (24) annassign -> . test ASSIGN test
    (55) test -> . or_test
    (56) or_test -> . and_test or_comp
    (59) and_test -> . not_test and_comp
    (62) not_test -> . NOT not_test
    (63) not_test -> . comparison
    (64) comparison -> . expression comphelper
    (77) expression -> . arith_expr
    (78) arith_expr -> . term PLUS arith_expr
    (79) arith_expr -> . term MINUS arith_expr
    (80) arith_expr -> . term empty
    (81) term -> . factor TIMES term
    (82) term -> . factor DIVIDE term
    (83) term -> . factor MODULE term
    (84) term -> . factor empty
    (85) factor -> . LPAREN MINUS factor RPAREN
    (86) factor -> . power
    (87) power -> . factor POWER factor
    (88) power -> . atom_expr empty
    (89) atom_expr -> . atom
    (90) atom -> . ID
    (91) atom -> . NUMBER
    (92) atom -> . STRING
    (93) atom -> . BOOL_TRUE
    (94) atom -> . BOOL_FALSE
    (95) atom -> . NONE

    $end            reduce using rule 96 (empty -> .)
    IF              shift and go to state 12
    FOR             shift and go to state 15
    BREAK           shift and go to state 16
    PRINT           shift and go to state 20
    CDEF            shift and go to state 23
    NOT             shift and go to state 27
    LPAREN          shift and go to state 21
    ID              shift and go to state 36
    NUMBER          shift and go to state 37
    STRING          shift and go to state 22
    BOOL_TRUE       shift and go to state 38
    BOOL_FALSE      shift and go to state 39
    NONE            shift and go to state 40

    stmt                           shift and go to state 2
    file_inputhelp                 shift and go to state 41
    file_input                     shift and go to state 42
    empty                          shift and go to state 43
    simple_stmt                    shift and go to state 3
    compound_stmt                  shift and go to state 4
    small_stmt                     shift and go to state 5
    if_stmnt                       shift and go to state 6
    for_stmt                       shift and go to state 7
    break_stmt                     shift and go to state 8
    expr_stmt                      shift and go to state 9
    print_stmt                     shift and go to state 10
    input_stmt                     shift and go to state 11
    test                           shift and go to state 13
    compound_if                    shift and go to state 14
    typotest                       shift and go to state 17
    augassign                      shift and go to state 18
    annassign                      shift and go to state 19
    or_test                        shift and go to state 24
    and_test                       shift and go to state 25
    not_test                       shift and go to state 26
    comparison                     shift and go to state 28
    expression                     shift and go to state 29
    arith_expr                     shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32
    power                          shift and go to state 33
    atom_expr                      shift and go to state 34
    atom                           shift and go to state 35

state 3

    (4) stmt -> simple_stmt .

    IF              reduce using rule 4 (stmt -> simple_stmt .)
    FOR             reduce using rule 4 (stmt -> simple_stmt .)
    BREAK           reduce using rule 4 (stmt -> simple_stmt .)
    PRINT           reduce using rule 4 (stmt -> simple_stmt .)
    CDEF            reduce using rule 4 (stmt -> simple_stmt .)
    NOT             reduce using rule 4 (stmt -> simple_stmt .)
    LPAREN          reduce using rule 4 (stmt -> simple_stmt .)
    ID              reduce using rule 4 (stmt -> simple_stmt .)
    NUMBER          reduce using rule 4 (stmt -> simple_stmt .)
    STRING          reduce using rule 4 (stmt -> simple_stmt .)
    BOOL_TRUE       reduce using rule 4 (stmt -> simple_stmt .)
    BOOL_FALSE      reduce using rule 4 (stmt -> simple_stmt .)
    NONE            reduce using rule 4 (stmt -> simple_stmt .)
    $end            reduce using rule 4 (stmt -> simple_stmt .)
    NEWLINE         reduce using rule 4 (stmt -> simple_stmt .)
    ELIF            reduce using rule 4 (stmt -> simple_stmt .)
    ELSE            reduce using rule 4 (stmt -> simple_stmt .)


state 4

    (5) stmt -> compound_stmt .

    IF              reduce using rule 5 (stmt -> compound_stmt .)
    FOR             reduce using rule 5 (stmt -> compound_stmt .)
    BREAK           reduce using rule 5 (stmt -> compound_stmt .)
    PRINT           reduce using rule 5 (stmt -> compound_stmt .)
    CDEF            reduce using rule 5 (stmt -> compound_stmt .)
    NOT             reduce using rule 5 (stmt -> compound_stmt .)
    LPAREN          reduce using rule 5 (stmt -> compound_stmt .)
    ID              reduce using rule 5 (stmt -> compound_stmt .)
    NUMBER          reduce using rule 5 (stmt -> compound_stmt .)
    STRING          reduce using rule 5 (stmt -> compound_stmt .)
    BOOL_TRUE       reduce using rule 5 (stmt -> compound_stmt .)
    BOOL_FALSE      reduce using rule 5 (stmt -> compound_stmt .)
    NONE            reduce using rule 5 (stmt -> compound_stmt .)
    $end            reduce using rule 5 (stmt -> compound_stmt .)
    NEWLINE         reduce using rule 5 (stmt -> compound_stmt .)
    ELIF            reduce using rule 5 (stmt -> compound_stmt .)
    ELSE            reduce using rule 5 (stmt -> compound_stmt .)


state 5

    (6) simple_stmt -> small_stmt . simplehelper
    (7) simplehelper -> . NEWLINE small_stmt simplehelper
    (8) simplehelper -> . empty
    (96) empty -> .
